--- a/spring-boot-webflux/src/main/resources/templates/form.html
+++ b/spring-boot-webflux/src/main/resources/templates/form.html
@@ -11,6 +11,7 @@
 		<a th:href="@{/listar}">Volver</a>
 		
 		<form th:action="@{/form}" method="post" th:object="${producto}">
+		<input th:if="${producto.id != null}" type="hidden" th:field="*{id}" />
 		    <div>
 		        <label for="nombre">Nombre</label>
 		        <div><input type="text" id="nombre" th:field="*{nombre}"></div>
@@ -24,7 +25,7 @@
 		        <div><input type="date" id="createAt" th:field="*{createAt}"></div>
 		    </div>
 		    <div>
-		        <div><input type="submit" valuie="Crear"></div>
+		        <div><input type="submit" th:value="${boton}"></div>
 		    </div>
 		</form>
 	</div>
