--- a/spring-boot-webflux/src/main/resources/templates/listar.html
+++ b/spring-boot-webflux/src/main/resources/templates/listar.html
@@ -5,6 +5,8 @@
 <title th:text="${titulo}"></title>
 </head>
 <body>
+	<div th:if="${param.error != null}" th:text="${param.error}"></div>
+	<div th:if="${param.success != null}" th:text="${param.success}"></div>
 	<h1 th:text="${titulo}"></h1>
 	<a th:href="@{/form}">Crear producto</a>
 	
@@ -15,6 +17,7 @@
 				<th>nombre</th>
 				<th>precio</th>
 				<th>fecha</th>
+				<th>editar</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -23,6 +26,7 @@
 				<td th:text="${producto.nombre}"></td>
 				<td th:text="${producto.precio}"></td>
 				<td th:text="${producto.createAt}"></td>
+				<td><a th:href="@{/form-v2/} + ${producto.id}">Editar</a></td>
 			</tr>
 		</tbody>
 	</table>
