--- a/spring-boot-webflux/src/main/resources/templates/form.html
+++ b/spring-boot-webflux/src/main/resources/templates/form.html
@@ -11,14 +11,16 @@
 		<a th:href="@{/listar}">Volver</a>
 		
 		<form th:action="@{/form}" method="post" th:object="${producto}">
-		<input th:if="${producto.id != null}" type="hidden" th:field="*{id}" />
+		<!-- <input th:if="${producto.id != null}" type="hidden" th:field="*{id}" />  -->
 		    <div>
 		        <label for="nombre">Nombre</label>
 		        <div><input type="text" id="nombre" th:field="*{nombre}"></div>
+		        <small th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
 		    </div>
 		    <div>
 		        <label for="precio">Precio</label>
 		        <div><input type="number" id="precio" th:field="*{precio}"></div>
+		        <small th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}"></small>
 		    </div>
 		    <div>
 		        <label for="createAt">Fecha</label>
