--- a/spring-boot-webflux/src/main/resources/templates/form.html
+++ b/spring-boot-webflux/src/main/resources/templates/form.html
@@ -27,6 +27,16 @@
 		        <div><input type="date" id="createAt" th:field="*{createAt}"></div>
 		    </div>
 		    <div>
+		        <label for="categoria">Categoría</label>
+		        <div>
+			        <select id="categoria" th:field="*{categoria.id}">
+			        	<option value="">Seleccionar</option>
+			        	<option th:each="categoria: ${categorias}" th:value="${categoria.id}" th:text="${categoria.nombre}"></option>
+			        </select>
+			        <small th:if="${#fields.hasErrors('categoria.id')}" th:errors="*{categoria.id}"></small>
+		        </div>
+		    </div>
+		    <div>
 		        <div><input type="submit" th:value="${boton}"></div>
 		    </div>
 		</form>
