--- a/spring-boot-webflux/src/main/resources/templates/form.html
+++ b/spring-boot-webflux/src/main/resources/templates/form.html
@@ -10,8 +10,9 @@
 	<div>
 		<a th:href="@{/listar}">Volver</a>
 		
-		<form th:action="@{/form}" method="post" th:object="${producto}">
+		<form th:action="@{/form}" method="post" th:object="${producto}" enctype="multipart/form-data">
 		<!-- <input th:if="${producto.id != null}" type="hidden" th:field="*{id}" />  -->
+		<!-- <input th:if="${producto.foto != null}" type="hidden" th:field="*{foto}" />  -->
 		    <div>
 		        <label for="nombre">Nombre</label>
 		        <div><input type="text" id="nombre" th:field="*{nombre}"></div>
@@ -35,6 +36,10 @@
 			        </select>
 		        </div>
 		        <small th:if="${#fields.hasErrors('categoria.id')}" th:errors="*{categoria.id}"></small>
+		    </div>
+		    <div>
+		        <label for="file">Foto</label>
+		        <div><input type="file" id="file" name="file" ></div>
 		    </div>
 		    <div>
 		        <div><input type="submit" th:value="${boton}"></div>
